--- a/custom_components/opentherm_web/manifest.json
+++ b/custom_components/opentherm_web/manifest.json
@@ -10,6 +10,6 @@
   "homekit": {},
   "requirements": [],
   "ssdp": [],
-  "zeroconf": [],
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "zeroconf": []
 }
