--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -5,4 +5,4 @@ default_config:
 logger:
   default: info
   logs:
-    custom_components.opentherm-web: debug
+    custom_components.opentherm_web: debug
